# Cursproject_django

./: pyproject.toml  readme.md
config/: settings.py  urls.py
user_client/: models.py  urls.py  views.py
user_client/migrations/: 0001_initial.py
user_client/templates/user_client/: base.html  clients_list.html  feedback.html  users_confirm_delete.html  users_detail.html  users_form.html  users_list.html
user_client/templates/user_client/includes/: inc_main_menu.html
